added a banner and section title

--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment No 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header class="header_top">
+        <div class="container">
+            <div class="banner">
+                <div class="banner_coloum">
+                    <h1>Let's make<br> beautiful flowers a<br> part of your life.</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <button class="btn_primary">Shop Now</button>
+                  </div>
+                  <div class="banner_coloum">
+                    <img src="images/pngwing 10.png" alt="">
+                  </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <h3 class="section_title">Our Featured Flowers</h3>
+            <p class="section_dsc">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.
+            </p>
+            
+
+
+
+
+
+
+
+        </section>
+
+
+    </main>
+    <footer>
+
+    </footer>
+
+
+
     
 </body>
 </html>
