banner and fuatured flower added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             <h3 class="section_title">Our Featured Flowers</h3>
             <p class="section_dsc">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.
             </p>
-            
-
+         <div class="flower_item_info">
+             <div class="flower_item2"><img src="images/pngwing 5.png" alt=""><p>Pink Flower Tree</p></div>
+             <div class="flower_item3"><img src="images/pngwing 7.png" alt=""><p>Pink Flower Tree</p></div>
+             <div class="flower_item1"><img src="images/pngwing 6.png" alt=""><p>Pink Flower Tree</p></div>
+        </div>
 
 
 
