created delivery part

--- a/index.html
+++ b/index.html
@@ -35,14 +35,27 @@
              <div class="flower_item2"><img src="images/pngwing 5.png" alt=""><p>Pink Flower Tree</p></div>
              <div class="flower_item3"><img src="images/pngwing 7.png" alt=""><p>Pink Flower Tree</p></div>
         </div>
-
-
-
+        </section>
+        
+        <section>
+            <div class="container_2">
+                <div class="delevery_part">
+                    <img src="images/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="delevery_part">
+                    <img src="images/Group 58.png" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="delevery_part">
+                    <img src="images/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
 
 
 
         </section>
-
 
     </main>
     <footer>
