sells part added

--- a/index.html
+++ b/index.html
@@ -52,18 +52,27 @@
                     <p>24/7 Free Support.</p>
                 </div>
             </div>
-
-
-
         </section>
-
     </main>
+    <section>
+        <div class="sells_part">
+            <div class="sells_coloum">
+                <h2>Hot Deal ! Sale Up To 25% Off</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <button class="btn_primary">Sign Up</button>
+            </div>
+            <div class="sells_coloum">
+                <img src="images/pngwing 8.png" alt="">
+            </div>
+        </div>
+    </section>
+    <main>
+        
+    </main>
+
     <footer>
 
     </footer>
 
-
-
-    
 </body>
 </html>
