added section title

--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
         </div>
     </section>
     <main>
-        
+        <section>
+            <h3 class="section_title">Instagram</h3>
+            <p class="section_dsc">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            <div class="instagram_section">
+                <div class="instagram_images"><img src="images/Flower 01.png" alt=""></div>
+                <div class="instagram_images"><img src="images/Rectangle 4.png" alt=""></div>
+                <div class="instagram_images"><img src="images/Rectangle 5.png" alt=""></div>
+                <div class="instagram_images"><img src="images/Rectangle 6.png" alt=""></div>
+            </div>
+        </section>
+        <section>
+            
+        </section>
     </main>
 
     <footer>
