added details part

--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
                 <div class="instagram_images"><img src="images/Rectangle 6.png" alt=""></div>
             </div>
         </section>
-       
+
+        <section>
+            <div class="banner_2">
+                <div class="last_section">
+                <h2>Get The Latest Deals</h2>
+                <p>$30 coupon for first shopping</p>
+                </div>
+                <form action="">
+                    <input id="input_info" type="email" name="" placeholder="  Enter your email here">
+                    <input id="button" class="btn_primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
