--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
     </main>
 
     <footer>
-
+       <div class="footer_dsc">
+        <h1>Flower<span>Shop</span></h1>
+        <p>It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+        <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+       </div> 
     </footer>
 
 </body>
